# ChangeLog for app-shells/bash-completion
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.140 2007/05/31 03:32:50 pioto Exp $

  31 May 2007; Mike Kelly <pioto@gentoo.org> metadata.xml:
  Remove myself from maintainers.xml. I haven't had success getting this
  up-to-date.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  12 Dec 2006; Mike Kelly <pioto@gentoo.org> metadata.xml:
  Add myself to metadata.xml

*bash-completion-20060301-r2 (22 Nov 2006)

  22 Nov 2006; Aron Griffis <agriffis@gentoo.org> files/bash-completion.sh,
  -bash-completion-20060301-r1.ebuild, +bash-completion-20060301-r2.ebuild:
  Fix bugs in files/bash-completion.sh, in particular default was renamed to
  base during development but forgot to change it here

*bash-completion-20060301-r1 (20 Nov 2006)

  20 Nov 2006; Aron Griffis <agriffis@gentoo.org> +files/bash-completion.sh,
  +bash-completion-20060301-r1.ebuild:
  Break /etc/bash_completion into /usr/share/bash-completion/{.pre,base,.post}
  so that the base definitions can be eselected. Rename
  /etc/profile.d/bash-completion to have a .sh extension so it's loaded
  automatically by /etc/profile. This is okay because it doesn't do anything
  until modules have been eselected. All of this makes it possible to
  configure bash-completions entirely with eselect instead of needing to add
  snippets to one's .bashrc

*bash-completion-20060301 (02 Mar 2006)

  02 Mar 2006; Aaron Walker <ka0ttic@gentoo.org>
  +files/20060301/01_all_no_xine.diff,
  +files/20060301/02_all_mplayer_flac.diff,
  +bash-completion-20060301.ebuild: