@@ -6,6 +6,6 @@ AUX 20060301/01_all_no_xine.diff 868 RMD160 87c39896ac86c3264a0e4f75a6a36c576867
 AUX 20060301/02_all_mplayer_flac.diff 481 RMD160 dec76457b90b7c745e6e9027a4c15d7cc2932f8c SHA1 ece53ed36bee8536c411508bf9120e0a17cd20cc SHA256 6f3efc7cf2b0d52f99f1f9d402d4be0c3d619e00275b599eb60eb47f265d02e7
 AUX bash-completion.sh 1649 RMD160 da78231539eafca91ea60ea80c08e1669687f9cd SHA1 748ab5a16f311a634d040a4932a0a8c4a5e2927e SHA256 c303d78216086d847d6bc086eb94c7b35dec8e7bc9d462e18dfc0aa54f044cac
 DIST bash-completion-20060301.tar.bz2 102357 RMD160 eaa9112289607bae51868f047a9673ee6f3e6a0c SHA1 19521f0fde4d9d06401ccd26ed4ec33d7d3aa23d SHA256 16727406bd3fbb6a23da375d4f3ca7c5d518afeb7dfb82c061a452eb7a93ceca
-EBUILD bash-completion-20060301-r2.ebuild 3076 RMD160 d7a3a624544764948b5d0dc93d8645ec0aa74c89 SHA1 8f839bbb97b4b9955c174c4ac0fe03652751f254 SHA256 fe5aedfbea061fdc66b92fbb6f2ca9d46ff8b6ea71ecf750e75a6e8d4c9cd291
-MISC ChangeLog 24995 RMD160 aab762a39f6e9ab9fc404a02680e66d53e53120b SHA1 c33d4fc3f3fc3de63b61681c915a6098b0b3d897 SHA256 c8ac7f78a4cea85626875a63f2dae51730d71e0801ab46ef578c870646c4d2c0
+EBUILD bash-completion-20060301-r2.ebuild 3072 RMD160 34a4095d548f1a29a550a303b649eeb96fcb179d SHA1 fa0afd25c0d69ecddc21e58ba714b356e344fdd1 SHA256 bca2dd173384309c0b261ad845c52b03dae098a49e1038721c14562392346ae9
+MISC ChangeLog 25216 RMD160 45cdb4964844fdcc7e8b17f818c8bc7c1c20b18c SHA1 e5a5dc4618a61ef5c361a4b2476f52641b5b2c09 SHA256 86e919f4d3536eb9b9c282d018cbddccc514cc471614db6a6db5d7355478d47c
 MISC metadata.xml 930 RMD160 e6718602012b2cfcb5be5bfc962889bf88f4dc73 SHA1 a585c9cfc0bdb59ee4c7ff1e786bc53d28d36aac SHA256 281bfd91145b2ae2a5c2774802dee741bbe625777b1c4e3eaefdca406e534ba9
