@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/bash-completion-20060301-r2.ebuild,v 1.2 2007/03/01 10:04:09 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/bash-completion-20060301-r2.ebuild,v 1.3 2008/01/12 18:35:56 caster Exp $
 
 EAPI="prefix"
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.caliban.org/files/bash/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos"
+KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE=""
 
 DEPEND=""
@@ -68,28 +68,28 @@ pkg_preinst() {
 }
 
 pkg_postinst() {
-	einfo
-	einfo "Versions of bash-completion prior to 20060301-r1 required each user to"
-	einfo "explicitly source /etc/profile.d/bash-completion in ~/.bashrc.  This"
-	einfo "was kludgy and inconsistent with the completion modules which are"
-	einfo "enabled with eselect bashcomp.  Now any user can enable the base"
-	einfo "completions without editing their .bashrc by running"
-	einfo
-	einfo "    eselect bashcomp enable base"
-	einfo
-	einfo "The system administrator can also be enable this globally with"
-	einfo
-	einfo "    eselect bashcomp enable --global base"
-	einfo
-	einfo "Additional completion functions can also be enabled or"
-	einfo "disabled using eselect's bashcomp module."
-	einfo
+	elog
+	elog "Versions of bash-completion prior to 20060301-r1 required each user to"
+	elog "explicitly source /etc/profile.d/bash-completion in ~/.bashrc.  This"
+	elog "was kludgy and inconsistent with the completion modules which are"
+	elog "enabled with eselect bashcomp.  Now any user can enable the base"
+	elog "completions without editing their .bashrc by running"
+	elog
+	elog "    eselect bashcomp enable base"
+	elog
+	elog "The system administrator can also be enable this globally with"
+	elog
+	elog "    eselect bashcomp enable --global base"
+	elog
+	elog "Additional completion functions can also be enabled or"
+	elog "disabled using eselect's bashcomp module."
+	elog
 
 	if has_version 'app-shells/zsh' ; then
-		einfo "If you are interested in using the provided bash completion functions with"
-		einfo "zsh, valuable tips on the effective use of bashcompinit are available:"
-		einfo "  http://www.zsh.org/mla/workers/2003/msg00046.html"
-		einfo "  http://zshwiki.org/ZshSwitchingTo"
-		einfo
+		elog "If you are interested in using the provided bash completion functions with"
+		elog "zsh, valuable tips on the effective use of bashcompinit are available:"
+		elog "  http://www.zsh.org/mla/workers/2003/msg00046.html"
+		elog "  http://zshwiki.org/ZshSwitchingTo"
+		elog
 	fi
 }
